--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <main>
   <app-navbar />
+  <div class="px-4 mx-auto max-w-6xl sm:px-6 lg:px-8 mt-20">
+    <div class="grid grid-cols-6 gap-6">
+      <app-article-list class="col-span-4" />
+      <app-article-categorization class="col-span-2" />
+    </div>
+  </div>
 </main>
