--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<header class="backdrop-blur-lg">
-  <div class="px-4 mx-auto max-w-6xl sm:px-6 lg:px-8">
-    <div class="flex justify-between py-2">
+<header class="backdrop-blur-sm sticky z-50 top-0">
+  <div class="px-5 mx-auto max-w-6xl sm:px-6 lg:px-8">
+    <div class="flex justify-between py-4">
       <div class="flex items-center space-x-24">
         <span class="text-xl font-semibold">Blog</span>
         <div class="flex space-x-10">
