--- a/src/app/article-card/article-card.component.html
+++ b/src/app/article-card/article-card.component.html
@@ -1,13 +1,9 @@
 <div class="mt-4 flex flex-col items-start">
   <h3 class="font-semibold text-lg">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    {{ title }}
   </h3>
   <p class="mt-2">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, ipsum
-    iusto? Libero nihil perferendis distinctio saepe. Magnam, similique vero!
-    Voluptatibus cupiditate error aut. Lorem ipsum dolor sit amet consectetur
-    adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-    Modi, placeat.
+    {{ description }}
   </p>
-  <button class="mt-3 font-semibold">Read more</button>
+  <button class="mt-2 font-semibold">Read more</button>
 </div>
