--- a/src/app/article-list/article-list.component.html
+++ b/src/app/article-list/article-list.component.html
@@ -1,10 +1,14 @@
-<div [class]="classes()">
-  <h2 class="text-amber-700 font-medium text-xl uppercase">
+<div class="h-full">
+  <h2 class="text-amber-700 font-medium text-xl sticky top-0 bg-white pb-4 uppercase">
     Articles and tutorials
   </h2>
-  <div class="mt-4 flex flex-col gap-5">
-    @for (article of articles; track $index) {
-    <app-article-card />
+  @if (isLoading) {
+  <div>Loading</div>
+  } @else {
+  <div class="flex flex-col gap-5">
+    @for (article of articles; track article.id) {
+    <app-article-card [article]="article" />
     }
   </div>
+  }
 </div>
