Display articles from the API

--- a/src/app/article-card/article-card.component.html
+++ b/src/app/article-card/article-card.component.html
@@ -1,9 +1,9 @@
 <div class="mt-4 flex flex-col items-start">
   <h3 class="font-semibold text-lg">
-    {{ title }}
+    {{ article().title }}
   </h3>
   <p class="mt-2">
-    {{ description }}
+    {{ article().description }}
   </p>
   <button class="mt-2 font-semibold">Read more</button>
 </div>
