--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,2 @@
-<main
-  class="h-screen max-h-screen overflow-hidden overflow-y-auto flex flex-col"
->
-  <app-navbar />
-  <div
-    class="max-w-6xl px-4 mx-auto mt-16 sm:px-6 lg:px-8 h-full overflow-y-scroll"
-  >
-    <div class="relative grid grid-cols-6 gap-18">
-      <app-article-list class="col-span-4" />
-      <app-article-categorization class="sticky top-0 z-20 col-span-2" />
-    </div>
-  </div>
-</main>
+<app-navbar />
+<router-outlet></router-outlet>
