--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="backdrop-blur-sm bg-red-400 sticky z-50 top-0">
+<header class="backdrop-blur-xs sticky z-50 top-0">
   <div class="px-5 mx-auto max-w-6xl sm:px-6 lg:px-8">
     <div class="flex justify-between py-4">
       <div class="flex items-center space-x-24">
