--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -1,4 +1,5 @@
-<markdown
+<div
   class="max-w-6xl px-4 mx-auto mt-16 sm:px-6 lg:px-8 h-full overflow-y-scroll"
-  [data]="articleHtml"
-></markdown>
+>
+  <markdown [data]="articleHtml"></markdown>
+</div>
