--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,4 +9,7 @@
       <app-article-categorization class="sticky top-0 z-20 col-span-2" />
     </div>
   </div>
+  <footer class="bg-amber-900/80 flex py-4 justify-center text-white">
+    <span class="flex justify-center items-center">Copyright&copy; <strong class="mx-1">ivadyhabimana</strong> {{ currentYear }} </span>
+  </footer>
 </main>
