--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,16 +2,7 @@
   <div class="px-5 mx-auto max-w-6xl sm:px-6 lg:px-8">
     <div class="flex justify-between py-4">
       <div class="flex items-center space-x-24">
-        <span class="text-xl font-semibold">Blog</span>
-        <div class="flex space-x-10">
-          @for (navLink of navLinks; track $index) {
-          <span>
-            <a>
-              {{ navLink }}
-            </a>
-          </span>
-          }
-        </div>
+        <span class="text-xl font-semibold text-amber-700">Blog</span>
       </div>
 
       <div class="flex items-center">
