--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,10 +16,16 @@
           placeholder="Enter email"
           formControlName="email"
         />
+          @if (emailControl?.hasError('minlength')) {
+            <p class="text-red-500 text-sm">Email is required</p>
+          }
+          @if (emailControl?.dirty && emailControl?.getError('email')) {
+            <p class="text-red-500 text-sm">Email is invalid</p>
+          }
       </div>
 
       <div>
-        <label for="password" class="block">Password {{loginForm.get('email')?.value}}</label>
+        <label for="password" class="block">Password {{loginForm.get('email')?.getError('password')}}</label>
         <input
           id="password"
           type="password"
