--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,9 +5,12 @@
         <span class="text-xl font-semibold text-amber-700">Blog</span>
       </div>
 
-      <div class="flex items-center">
+      <div class="flex items-center gap-6">
         <span class="inline-flex items-center gap-1"
           >Connect <ng-icon name="heroRss"
+        /></span>
+        <span class="inline-flex items-center gap-1"
+          >Journal <ng-icon name="heroBookOpen"
         /></span>
       </div>
     </div>
